infrastructure/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risk-lab-api
  namespace: deployguard-risk-lab
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - risk-lab.example.com
      secretName: risk-lab-tls
  rules:
    - host: risk-lab.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: risk-lab-api
                port:
                  number: 80
